<resources>
    <string name="app_name">HSStore</string>
    <string name="search">Recherche</string>
    <string name="reference">Reference</string>
    <string name="add">Ajouter</string>
    <string name="size">Pointure</string>
    <string name="color">Couleur</string>
    <string name="update">Sauvegarder</string>
    <string name="delete">Supprimer</string>
    <string name="price">Prix</string>
    <string name="references">Reference : Prix</string>
    <string name="position">Position</string>
    <string name="filter_criteria">Filtrage par rapport :</string>
    <string name="store">Depot</string>
    <string name="positions">Positions</string>
    <string name="the_positions">Les positions</string>
    <string name="references2">Reference(s)</string>
    <string name="update_position">Modifier position</string>
    <string name="enter_refs">Entrez les references svp !</string>
    <string name="position_updated">Positions modifiées</string>
    <string name="two_points_space">": "</string>
    <string name="delete_confirm_msg">"Etes-vous sûr que vous voulez supprimer "</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="add_depot">Ajouter depot</string>
    <string name="enter_ref">Entrez le reference svp !</string>
    <string name="invalid_ref">Reference no doit pas contenir des virgule !</string>
    <string name="enter_position">Entrez la position svp !</string>
    <string name="stock">Stock</string>
    <string name="type">Type</string>
    <string name="type_dialog_msg">Selectionner le type:</string>
    <string name="colors_and_sizes">Colors and sizes</string>
    <string name="enter_colors_sizes">Specifier les couleurs et les pointures svp</string>
    <string name="enter_sizes">Specifier les pointures de chaque couleur svp</string>
    <string name="syntax_error">Verifier que la syntaxe est correcte lors de la specification des couleurs et pointures</string>
    <string name="invalid_size">Specifier des pointures valides svp</string>
    <string name="shoe_s">Chaussure(s)</string>
    <string-array name="filter_types">
        <item name="ref">REF</item>
        <item name="pos">POS</item>
    </string-array>
    <string-array name="types">
        <item name="all">Tout</item>
        <item name="boot">Boot</item>
        <item name="soiree">Soirée</item>
        <item name="chaussure_soiree">Chaussure-Soirée</item>
        <item name="sabo_soiree">Sabo-Soirée</item>
        <item name="sandal_soiree">Sandal-Soirée</item>
        <item name="moc">Moccasin</item>
        <item name="bal">Ballerine</item>
        <item name="class">Classique</item>
        <item name="sabot">Sabo</item>
        <item name="bottine">Booting</item>
        <item name="sandal">Sandal</item>
        <item name="boot_fillette">Boot-Fillette</item>
        <item name="adidas">Adidas</item>
        <item name="adidas_kids">Adidas-Enfant</item>
    </string-array>
    <string-array name="regions">
        <item name="centre">CENTRE</item>
        <item name="rekad">REKAD</item>
        <item name="walid">WALID</item>
    </string-array>
    <string-array name="sizes">
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
    </string-array>
    <string name="filtering">Filtrage</string>
    <string name="filter">Filtre</string>
    <string name="size_dialog_msg">Pointure :</string>
    <string name="db_error">Erreur de base de données</string>
    <string name="color_dialog">Couleur :</string>
    <string name="product_s_added">Products were successfully added.</string>
    <string name="close">Close</string>
    <string name="choose_source">Choisissez la source</string>
    <string name="reference_s">Reference(s)</string>
    <string name="enter_color">Entrez le couleur du chaussure s\'il vous plaît</string>
    <string name="enter_size">Entrez le pointure du chaussure s\'il vous plaît</string>
    <string name="enter_valid_size">Entrez un pointure valide s\'il vous plaît</string>
    <string name="camera_storage_perms_needed">Camera and storage permission are needed</string>
    <string name="storage_perm_needed">Storage permission is needed</string>
    <string name="title_activity_products">Les modeles</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="are_you_sure">Certains champs sont remplit, etes-vous sûr que vous voulez retournez?</string>
    <string name="colors">Color(s)</string>
    <string name="counter">Counter</string>
    <string name="no_models">No models were found !</string>
    <string name="piece_s">Piece(s)</string>
    <string name="sizes">Sizes</string>
    <string name="colors_two">Available colors:</string>
    <string name="sizes_two">Available sizes:</string>
    <string name="piece_s_two">Piece(s):</string>
    <string name="title_activity_update_model">ScrollingActivity</string>
    <string name="model_updated">Model was successfully updated!</string>
    <string name="interogation_mark">\?</string>
    <string name="not_defined">Undefined</string>
    <string name="confirm">Confirm</string>
    <string name="region">Region</string>
    <string name="region_filtering">Filtrage par region</string>
    <string name="depot_updated">Depot modifée</string>

</resources>