<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/upperBarLayout"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/shape_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_down_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtering"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="8dp"
            tools:layout_editor_absoluteY="128dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upperBarLayout">


            <TextView
                android:id="@+id/typeTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rectangle"
                android:ems="10"
                android:maxLines="1"
                android:textSize="18sp"
                android:padding="12sp"
                android:hint="@string/type"
                app:drawableEndCompat="@drawable/ic_arrow_down_grey"
                android:drawablePadding="8sp"
                app:drawableStartCompat="@drawable/ic_type_grey" />

            <TextView
                android:id="@+id/sizeTV"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:layout_weight="2"
                android:background="@drawable/shape_rectangle"
                android:ems="10"
                android:maxLines="1"
                android:textSize="18sp"
                android:padding="12sp"
                android:hint="@string/size"
                app:drawableEndCompat="@drawable/ic_arrow_down_grey"
                android:drawablePadding="8sp"
                app:drawableStartCompat="@drawable/ic_size_grey" />

            <TextView
                android:id="@+id/colorTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_rectangle"
                android:ems="10"
                android:hint="@string/color"
                android:padding="12sp"
                android:textSize="18sp"
                android:drawablePadding="8sp"
                app:drawableStartCompat="@drawable/ic_color_grey"
                app:drawableEndCompat="@drawable/ic_arrow_down_grey"/>

            <Button
                android:id="@+id/filterBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32sp"
                android:background="@color/colorPrimary"
                android:minWidth="128dp"
                android:text="@string/filter" />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>